# qmpp

./: Cargo.toml  tests
qmpp-hello-plugin/: Cargo.toml
qmpp-hello-plugin/src/: implementation.rs  lib.rs  tests.rs
qmpp-high-api/: Cargo.toml
qmpp-high-api/src/: handles.rs  host_interface.rs  lib.rs
qmpp-host/: Cargo.toml
qmpp-host/src/: main.rs  patch.rs
qmpp-host/src/plugin/: common.rs  init.rs  mod.rs  process.rs
qmpp-host/test-res/: q25_limits_4lt.map
qmpp-shared/: Cargo.toml
qmpp-shared/src/: lib.rs
